# godshatter

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md
advent-of-code/: requirements.txt
advent-of-code/2020/: 1.ipynb  10.ipynb  11.py  13.py  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  19_2.ipynb  2.ipynb  20.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  Norvig.ipynb
advent-of-code/2021/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
advent-of-code/2023/: 1.py  2.py
advent-of-code/2024/: AOC.ipynb
analysis/: .gitignore  Backtests.ipynb  CLTPareto.ipynb  EyeballingCovariances.ipynb  Vivli.ipynb  requirements.txt
analysis/data/: oaf_agronomic_data.csv
antibody-mcts/: pyproject.toml  requirements.in  requirements.txt
antibody-mcts/antibody_mcts/: __init__.py  distributed.py  gcp.py  mcts.py  pdb.py
cifar-100/: .gitignore  README.md  pyproject.toml  requirements.txt
gnn-fun/: README.md  pyproject.toml  requirements.in
manim/: nonlinear.py  requirements.in
micrograd/: README.md
micrograd/micrograd/: engine.py
nanogpt/: a100.yaml  hello_sky.yaml  pyproject.toml
nanogpt/notebooks/: LoadGPT2.ipynb
nanogpt/src/nanogpt/: __init__.py  model.py
pdlt/: DepthToWidthPreactivationMagnitude.ipynb
rosalind/: dna.ipynb  orf.ipynb  prot.ipynb  revc.ipynb  rna.ipynb  subs.ipynb
truth-extraction/: README.md  pyproject.toml  requirements.txt
typechecker/: README.md  pyproject.toml
typechecker/src/typechecker/: __init__.py  tinygrad.py
typechecker/tests/: test_typechecker.py
(+14 files in other folders)
