[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "complaints@warr.in" }
]
requires-python = ">=3.13"
dependencies = [
    "jaxtyping>=0.3.3",
    "numpy>=2.3.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "typechecker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "transformers>=4.57.1",
]

[tool.uv.sources]
typechecker = { path = "../typechecker", editable = true }
