[project]
name = "typechecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "complaints@warr.in" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
tinygrad = [
    "jaxtyping>=0.3.3",
    "tinygrad>=0.11.0",
]
